--- a/it.css
+++ b/it.css
@@ -833,6 +833,7 @@ bottom: 0px;
     display: flex;
     text-align: center;
     justify-content: center;
+       height:300px;
    }
    .container{
     text-align: left;
