--- a/it.css
+++ b/it.css
@@ -829,7 +829,7 @@ bottom: 0px;
     position: relative;
     bottom: 0;
     letter-spacing: normal;
-    margin-top: 588px;
+    margin-top: 188vh;
     width: 100%;
     display: flex;
     text-align: center;
