--- a/styles.css
+++ b/styles.css
@@ -266,5 +266,10 @@ font-family: fantasy;
    width: 70%;
 margin-bottom: 10px;
 }
-
+.home-section{
+    width:70%;
+}
+    .home-section h1{
+        font-size:25px;
+        
 }
