--- a/styles.css
+++ b/styles.css
@@ -266,7 +266,7 @@ font-family: fantasy;
    width: 70%;
 margin-bottom: 10px;
 }
-.home-section{
+.home-section img{
     width:70%;
 }
     .home-section h1{
